fixing missing background

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@
 }
 
 body {
-  color: ;
+  color: var(--tertiary-color);
   font-family: Helvetica, Arial, sans-serif;
 }
 
@@ -204,8 +204,8 @@ section {
   content: "";
   height: 20px;
   width: 20px;
-  background: rgba(255,255,255, 0.75);
-  border: 1px solid var(--secondary-color);
+  background: rgba(255, 255, 255, 0.75);  
+  border: 1px solid var(--secondary-color);  
   position: absolute;
   top: -4px;
   left: -30px;
@@ -217,8 +217,8 @@ section {
 
 .radio-wrapper label::after {
   content: "";
-  width: 20px;
   height: 20px;
+  width: 20px;
   border-radius: 50%;
   background: var(--secondary-color);
   position: absolute;
@@ -239,11 +239,13 @@ section {
   transform: rotate(-58deg);
 }
 
-.checkbox-wrapper input + label::after, .radio-wrapper input + label::after {
+.checkbox-wrapper input + label::after, 
+.radio-wrapper input + label::after {
   content: none;
 }
 
-.checkbox-wrapper input:checked + label::after, .radio-wrapper input:checked + label::after {
+.checkbox-wrapper input:checked + label::after, 
+.radio-wrapper input:checked + label::after {
   content: "";
 }
 /* HERO STYLES END */
@@ -270,7 +272,6 @@ section {
 /* SECTION TITLE STYLES END */
 
 /* WHAT WE DO STYLES */
-
 .intro p {
   line-height: 1.7;
   color: var(--tertiary-color);
@@ -291,7 +292,6 @@ section {
   margin: 50px auto;
   padding-bottom: 50px;
   width: 80%;
-  border-bottom: 1px solid var(--tertiary-color);
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -382,7 +382,7 @@ section {
 
 /* REACH OUT STYLES START */
 .contact {
-  background: #var(--secondary-color)4e76;
+  background: var(--secondary-color);
 }
 
 .contact h2 {
